src/test/deca/context/invalid/created/sans_objet/variable_non_declaree.deca
// Description:
//    variable non declarée
//
// Resultats:
//    Ligne 14: variable non declarée.
// 
// Historique:
//    cree le 01/01/2024

{
   int a;
   // Doit etre refusé.
   a = b + 1;
}
